--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "{'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
@@ -481,8 +483,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "distance_all(fred, neighbors)\n",
@@ -503,8 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
@@ -513,8 +519,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nearest_neighbors(fred, neighbors, 2)\n",
